--- a/src/app/sampleComponent/sampleComp.html
+++ b/src/app/sampleComponent/sampleComp.html
@@ -9,6 +9,7 @@
 <select (change)="changeValue()">
   <option *ngFor="let v of empolyelist">{{v.name}}</option>
 </select>
+<button (click)="changeFun()">ChengeValue</button>
 
 <app-test [sample11]></app-test>
 
